--- a/CasosDengueIquitos.ipynb
+++ b/CasosDengueIquitos.ipynb
@@ -1642,7 +1642,11 @@
       "metadata": {
         "id": "wwJngaVB3uWX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "9a3ad5d8-e2af-4640-ce7f-ee6ba405fc9d"
       },
       "source": [
         "import statsmodels.api as sm\n",
@@ -1650,7 +1654,8 @@
         "from statsmodels.tools import eval_measures\n",
         "\n",
         "def binomial_negativa(train, cv):\n",
-        "    formula =  \"total_cases ~ .\" \n",
+        "    predictors = '+'.join(trainingSet.columns).replace('+total_cases', '') \n",
+        "    formula =  'total_cases ~ ' + predictors\n",
         "    alpha_grid = np.linspace(0.01, 2, 100)\n",
         "    \n",
         "    best_alpha = 0; best_mae = 1000\n",
@@ -1660,8 +1665,9 @@
         "                        family = sm.families.NegativeBinomial(alpha = alpha))\n",
         "        nb_model = model.fit()\n",
         "        \n",
-        "        cv_pred = map(int, map(round, nb_model.predict(cv)))\n",
-        "        mae = eval_measures.meanabs(cv_pred, cv.y)\n",
+        "        cv_pred = nb_model.predict(cv).fillna(0)\n",
+        "       \n",
+        "        mae = eval_measures.meanabs(cv_pred, cv.total_cases)\n",
         "        \n",
         "        if mae < best_mae:\n",
         "            best_mae = mae\n",
@@ -1669,12 +1675,461 @@
         "            \n",
         "    total = pd.concat([train, cv])\n",
         "    \n",
-        "    print('Negative Binomial Model: ' + str(best_mae))\n",
+        "    print('Modelo Binomial Negativo: ' + str(best_mae))\n",
         "    return smf.glm(formula = formula, data = total,\n",
-        "                   family = sm.families.NegativeBinomial(alpha = best_alpha)).fit()\n"
+        "                   family = sm.families.NegativeBinomial(alpha = best_alpha)).fit()\n",
+        "\n",
+        "binomial_negativa(trainingSet, testSet)\n"
+      ],
+      "execution_count": 268,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Modelo Binomial Negativo: 6.7457197684234185\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<statsmodels.genmod.generalized_linear_model.GLMResultsWrapper at 0x7fe534aff278>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 268
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Cu9rdQ2mFiR-",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cw-O67Dm63JG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(testSet['total_cases'])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lha90Z1i4fiF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f015c419-3e64-4a24-dbab-7fc8966a5a4c"
+      },
+      "source": [
+        "binomial_negativa(trainingSet, testSet)"
+      ],
+      "execution_count": 262,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "17\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C99x7aAwChaX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 439
+        },
+        "outputId": "b55a5293-2f22-479b-9053-5a02974c3cc8"
+      },
+      "source": [
+        "testSet"
+      ],
+      "execution_count": 233,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>year</th>\n",
+              "      <th>weekofyear</th>\n",
+              "      <th>ndvi_ne</th>\n",
+              "      <th>ndvi_nw</th>\n",
+              "      <th>ndvi_se</th>\n",
+              "      <th>ndvi_sw</th>\n",
+              "      <th>precipitation_amt_mm</th>\n",
+              "      <th>reanalysis_air_temp_k</th>\n",
+              "      <th>reanalysis_avg_temp_k</th>\n",
+              "      <th>reanalysis_dew_point_temp_k</th>\n",
+              "      <th>reanalysis_max_air_temp_k</th>\n",
+              "      <th>reanalysis_min_air_temp_k</th>\n",
+              "      <th>reanalysis_precip_amt_kg_per_m2</th>\n",
+              "      <th>reanalysis_relative_humidity_percent</th>\n",
+              "      <th>reanalysis_sat_precip_amt_mm</th>\n",
+              "      <th>reanalysis_specific_humidity_g_per_kg</th>\n",
+              "      <th>reanalysis_tdtr_k</th>\n",
+              "      <th>station_avg_temp_c</th>\n",
+              "      <th>station_diur_temp_rng_c</th>\n",
+              "      <th>station_max_temp_c</th>\n",
+              "      <th>station_min_temp_c</th>\n",
+              "      <th>station_precip_mm</th>\n",
+              "      <th>total_cases</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>38</th>\n",
+              "      <td>2001</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.162380</td>\n",
+              "      <td>0.150817</td>\n",
+              "      <td>0.094657</td>\n",
+              "      <td>0.132257</td>\n",
+              "      <td>94.06</td>\n",
+              "      <td>296.852857</td>\n",
+              "      <td>297.600000</td>\n",
+              "      <td>296.078571</td>\n",
+              "      <td>303.2</td>\n",
+              "      <td>292.8</td>\n",
+              "      <td>304.52</td>\n",
+              "      <td>95.924286</td>\n",
+              "      <td>94.06</td>\n",
+              "      <td>17.668571</td>\n",
+              "      <td>6.200000</td>\n",
+              "      <td>27.050</td>\n",
+              "      <td>10.950</td>\n",
+              "      <td>34.2</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>196</th>\n",
+              "      <td>2004</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.359214</td>\n",
+              "      <td>0.334843</td>\n",
+              "      <td>0.279157</td>\n",
+              "      <td>0.361271</td>\n",
+              "      <td>47.26</td>\n",
+              "      <td>297.812857</td>\n",
+              "      <td>298.978571</td>\n",
+              "      <td>297.175714</td>\n",
+              "      <td>305.6</td>\n",
+              "      <td>294.2</td>\n",
+              "      <td>135.40</td>\n",
+              "      <td>96.498571</td>\n",
+              "      <td>47.26</td>\n",
+              "      <td>18.825714</td>\n",
+              "      <td>6.271429</td>\n",
+              "      <td>27.650</td>\n",
+              "      <td>9.500</td>\n",
+              "      <td>33.1</td>\n",
+              "      <td>22.3</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>236</th>\n",
+              "      <td>2005</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.304414</td>\n",
+              "      <td>0.361257</td>\n",
+              "      <td>0.312600</td>\n",
+              "      <td>0.315629</td>\n",
+              "      <td>93.73</td>\n",
+              "      <td>297.662857</td>\n",
+              "      <td>298.842857</td>\n",
+              "      <td>296.727143</td>\n",
+              "      <td>307.6</td>\n",
+              "      <td>291.6</td>\n",
+              "      <td>96.21</td>\n",
+              "      <td>95.530000</td>\n",
+              "      <td>93.73</td>\n",
+              "      <td>18.408571</td>\n",
+              "      <td>7.228571</td>\n",
+              "      <td>28.400</td>\n",
+              "      <td>10.400</td>\n",
+              "      <td>34.2</td>\n",
+              "      <td>22.5</td>\n",
+              "      <td>232.1</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>91</th>\n",
+              "      <td>2002</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.197080</td>\n",
+              "      <td>0.296229</td>\n",
+              "      <td>0.180500</td>\n",
+              "      <td>0.276329</td>\n",
+              "      <td>94.01</td>\n",
+              "      <td>297.174286</td>\n",
+              "      <td>298.064286</td>\n",
+              "      <td>296.741429</td>\n",
+              "      <td>303.9</td>\n",
+              "      <td>294.5</td>\n",
+              "      <td>122.30</td>\n",
+              "      <td>97.775714</td>\n",
+              "      <td>94.01</td>\n",
+              "      <td>18.395714</td>\n",
+              "      <td>6.185714</td>\n",
+              "      <td>27.300</td>\n",
+              "      <td>10.400</td>\n",
+              "      <td>32.5</td>\n",
+              "      <td>20.2</td>\n",
+              "      <td>20.1</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>2000</td>\n",
+              "      <td>40</td>\n",
+              "      <td>0.337540</td>\n",
+              "      <td>0.276943</td>\n",
+              "      <td>0.277500</td>\n",
+              "      <td>0.255050</td>\n",
+              "      <td>46.22</td>\n",
+              "      <td>298.372857</td>\n",
+              "      <td>300.500000</td>\n",
+              "      <td>294.664286</td>\n",
+              "      <td>309.8</td>\n",
+              "      <td>292.7</td>\n",
+              "      <td>16.60</td>\n",
+              "      <td>82.371429</td>\n",
+              "      <td>46.22</td>\n",
+              "      <td>16.148571</td>\n",
+              "      <td>11.971429</td>\n",
+              "      <td>26.700</td>\n",
+              "      <td>11.675</td>\n",
+              "      <td>34.0</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>63.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>483</th>\n",
+              "      <td>2009</td>\n",
+              "      <td>42</td>\n",
+              "      <td>0.297414</td>\n",
+              "      <td>0.282171</td>\n",
+              "      <td>0.255929</td>\n",
+              "      <td>0.319786</td>\n",
+              "      <td>30.49</td>\n",
+              "      <td>299.737143</td>\n",
+              "      <td>301.000000</td>\n",
+              "      <td>295.350000</td>\n",
+              "      <td>311.3</td>\n",
+              "      <td>293.8</td>\n",
+              "      <td>18.10</td>\n",
+              "      <td>79.222857</td>\n",
+              "      <td>30.49</td>\n",
+              "      <td>16.895714</td>\n",
+              "      <td>11.885714</td>\n",
+              "      <td>27.750</td>\n",
+              "      <td>10.650</td>\n",
+              "      <td>34.2</td>\n",
+              "      <td>21.2</td>\n",
+              "      <td>11.2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>207</th>\n",
+              "      <td>2004</td>\n",
+              "      <td>26</td>\n",
+              "      <td>0.239233</td>\n",
+              "      <td>0.153543</td>\n",
+              "      <td>0.132829</td>\n",
+              "      <td>0.197043</td>\n",
+              "      <td>32.95</td>\n",
+              "      <td>295.634286</td>\n",
+              "      <td>296.814286</td>\n",
+              "      <td>293.860000</td>\n",
+              "      <td>304.2</td>\n",
+              "      <td>289.8</td>\n",
+              "      <td>25.90</td>\n",
+              "      <td>90.447143</td>\n",
+              "      <td>32.95</td>\n",
+              "      <td>15.312857</td>\n",
+              "      <td>8.400000</td>\n",
+              "      <td>25.075</td>\n",
+              "      <td>9.075</td>\n",
+              "      <td>32.1</td>\n",
+              "      <td>18.6</td>\n",
+              "      <td>98.5</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>163</th>\n",
+              "      <td>2003</td>\n",
+              "      <td>34</td>\n",
+              "      <td>0.425243</td>\n",
+              "      <td>0.362483</td>\n",
+              "      <td>0.356614</td>\n",
+              "      <td>0.385529</td>\n",
+              "      <td>45.38</td>\n",
+              "      <td>297.365714</td>\n",
+              "      <td>298.857143</td>\n",
+              "      <td>293.511429</td>\n",
+              "      <td>308.1</td>\n",
+              "      <td>292.0</td>\n",
+              "      <td>35.10</td>\n",
+              "      <td>81.942857</td>\n",
+              "      <td>45.38</td>\n",
+              "      <td>15.010000</td>\n",
+              "      <td>10.057143</td>\n",
+              "      <td>27.750</td>\n",
+              "      <td>11.900</td>\n",
+              "      <td>34.0</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>18.3</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>2000</td>\n",
+              "      <td>46</td>\n",
+              "      <td>0.099933</td>\n",
+              "      <td>0.035860</td>\n",
+              "      <td>0.195486</td>\n",
+              "      <td>0.064183</td>\n",
+              "      <td>39.25</td>\n",
+              "      <td>301.637143</td>\n",
+              "      <td>302.614286</td>\n",
+              "      <td>294.232857</td>\n",
+              "      <td>311.8</td>\n",
+              "      <td>294.2</td>\n",
+              "      <td>3.60</td>\n",
+              "      <td>67.185714</td>\n",
+              "      <td>39.25</td>\n",
+              "      <td>15.880000</td>\n",
+              "      <td>13.371429</td>\n",
+              "      <td>29.025</td>\n",
+              "      <td>13.100</td>\n",
+              "      <td>36.4</td>\n",
+              "      <td>21.7</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>444</th>\n",
+              "      <td>2009</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.188486</td>\n",
+              "      <td>0.188186</td>\n",
+              "      <td>0.203914</td>\n",
+              "      <td>0.277500</td>\n",
+              "      <td>72.03</td>\n",
+              "      <td>296.682857</td>\n",
+              "      <td>297.414286</td>\n",
+              "      <td>296.418571</td>\n",
+              "      <td>304.0</td>\n",
+              "      <td>295.2</td>\n",
+              "      <td>149.77</td>\n",
+              "      <td>98.610000</td>\n",
+              "      <td>72.03</td>\n",
+              "      <td>17.995714</td>\n",
+              "      <td>3.714286</td>\n",
+              "      <td>27.180</td>\n",
+              "      <td>10.240</td>\n",
+              "      <td>33.3</td>\n",
+              "      <td>21.1</td>\n",
+              "      <td>72.8</td>\n",
+              "      <td>11</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>156 rows × 23 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     year  weekofyear  ...  station_precip_mm  total_cases\n",
+              "38   2001          13  ...               80.0            0\n",
+              "196  2004          15  ...                4.0            8\n",
+              "236  2005           2  ...              232.1            5\n",
+              "91   2002          14  ...               20.1           11\n",
+              "14   2000          40  ...               63.0            0\n",
+              "..    ...         ...  ...                ...          ...\n",
+              "483  2009          42  ...               11.2            1\n",
+              "207  2004          26  ...               98.5            2\n",
+              "163  2003          34  ...               18.3            0\n",
+              "20   2000          46  ...                0.0            0\n",
+              "444  2009           3  ...               72.8           11\n",
+              "\n",
+              "[156 rows x 23 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 233
+        }
+      ]
     }
   ]
 }
