--- a/CasosDengueIquitos.ipynb
+++ b/CasosDengueIquitos.ipynb
@@ -2051,13 +2051,17 @@
         "\n",
         "def red_neuronal(train, cv):\n",
         "  NN_model = Sequential()\n",
+        "\n",
+        "  dataTrain = train.drop(['total_cases', 'ano_1'], axis=1)\n",
+        "  dataTest = cv.drop(['total_cases', 'ano_1'], axis=1)\n",
+        "\n",
         "  # The Input Layer :\n",
-        "  NN_model.add(Dense(12, kernel_initializer='normal',input_dim = 22, activation='relu'))\n",
+        "  NN_model.add(Dense(200, kernel_initializer='normal',input_dim = 22, activation='relu'))\n",
         "  \n",
         "  # The Hidden Layers :\n",
-        "  NN_model.add(Dense(5, kernel_initializer='normal',activation='relu'))\n",
-        "  #NN_model.add(Dense(3, kernel_initializer='normal',activation='relu'))\n",
-        "  #NN_model.add(Dense(3, kernel_initializer='normal',activation='relu'))\n",
+        "  NN_model.add(Dense(105, kernel_initializer='normal',activation='relu'))\n",
+        "  NN_model.add(Dense(20, kernel_initializer='normal',activation='relu'))\n",
+        "  NN_model.add(Dense(20, kernel_initializer='normal',activation='relu'))\n",
         "\n",
         "  # The Output Layer :\n",
         "  NN_model.add(Dense(1, kernel_initializer='normal',activation='linear'))\n",
@@ -2066,11 +2070,8 @@
         "  NN_model.compile(loss='mean_absolute_error', optimizer='adam', metrics=['mean_absolute_error'])\n",
         "  NN_model.summary()\n",
         "\n",
-        "  dataTrain = train.drop(['total_cases', 'ano_1'], axis=1)\n",
-        "  dataTest = cv.drop(['total_cases', 'ano_1'], axis=1)\n",
-        "\n",
-        "  NN_model.fit(dataTrain, train.total_cases, epochs=20, batch_size=32, validation_split = 0.2)\n",
-        "\n",
+        "  NN_model.fit(dataTrain, train.total_cases, epochs=20, batch_size=3)\n",
+        " \n",
         "  prediction = NN_model.predict(dataTest)\n",
         "  print(prediction)\n",
         "  return\n",
@@ -2095,175 +2096,178 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "b920fc7f-ccb1-45fe-b23d-91369129b66f"
+        "outputId": "eecd958f-3526-479c-fab7-ba5dd20bb110"
       },
       "source": [
         "rnn = red_neuronal(trainingSet, testSet)"
       ],
-      "execution_count": 114,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_16\"\n",
+            "Model: \"sequential_25\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "dense_49 (Dense)             (None, 12)                276       \n",
+            "dense_73 (Dense)             (None, 200)               4600      \n",
             "_________________________________________________________________\n",
-            "dense_50 (Dense)             (None, 5)                 65        \n",
+            "dense_74 (Dense)             (None, 105)               21105     \n",
             "_________________________________________________________________\n",
-            "dense_51 (Dense)             (None, 1)                 6         \n",
+            "dense_75 (Dense)             (None, 20)                2120      \n",
+            "_________________________________________________________________\n",
+            "dense_76 (Dense)             (None, 20)                420       \n",
+            "_________________________________________________________________\n",
+            "dense_77 (Dense)             (None, 1)                 21        \n",
             "=================================================================\n",
-            "Total params: 347\n",
-            "Trainable params: 347\n",
+            "Total params: 28,266\n",
+            "Trainable params: 28,266\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "Train on 332 samples, validate on 84 samples\n",
             "Epoch 1/20\n",
-            "332/332 [==============================] - 1s 3ms/step - loss: 7.1723 - mean_absolute_error: 7.1723 - val_loss: 7.3148 - val_mean_absolute_error: 7.3148\n",
+            "416/416 [==============================] - 2s 5ms/step - loss: 7.4944 - mean_absolute_error: 7.4944\n",
             "Epoch 2/20\n",
-            "332/332 [==============================] - 0s 189us/step - loss: 7.9805 - mean_absolute_error: 7.9805 - val_loss: 7.3078 - val_mean_absolute_error: 7.3078\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.4224 - mean_absolute_error: 7.4224\n",
             "Epoch 3/20\n",
-            "332/332 [==============================] - 0s 171us/step - loss: 7.9723 - mean_absolute_error: 7.9723 - val_loss: 7.3005 - val_mean_absolute_error: 7.3005\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.3512 - mean_absolute_error: 7.3512\n",
             "Epoch 4/20\n",
-            "332/332 [==============================] - 0s 196us/step - loss: 7.9640 - mean_absolute_error: 7.9640 - val_loss: 7.2932 - val_mean_absolute_error: 7.2932\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.2798 - mean_absolute_error: 7.2798\n",
             "Epoch 5/20\n",
-            "332/332 [==============================] - 0s 217us/step - loss: 7.9559 - mean_absolute_error: 7.9559 - val_loss: 7.2857 - val_mean_absolute_error: 7.2857\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.2085 - mean_absolute_error: 7.2085\n",
             "Epoch 6/20\n",
-            "332/332 [==============================] - 0s 243us/step - loss: 7.9477 - mean_absolute_error: 7.9477 - val_loss: 7.2783 - val_mean_absolute_error: 7.2783\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.1373 - mean_absolute_error: 7.1373\n",
             "Epoch 7/20\n",
-            "332/332 [==============================] - 0s 191us/step - loss: 7.9397 - mean_absolute_error: 7.9397 - val_loss: 7.2712 - val_mean_absolute_error: 7.2712\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 7.0660 - mean_absolute_error: 7.0660\n",
             "Epoch 8/20\n",
-            "332/332 [==============================] - 0s 198us/step - loss: 7.9316 - mean_absolute_error: 7.9316 - val_loss: 7.2641 - val_mean_absolute_error: 7.2641\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.9945 - mean_absolute_error: 6.9945\n",
             "Epoch 9/20\n",
-            "332/332 [==============================] - 0s 190us/step - loss: 7.9235 - mean_absolute_error: 7.9235 - val_loss: 7.2571 - val_mean_absolute_error: 7.2571\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.9235 - mean_absolute_error: 6.9235\n",
             "Epoch 10/20\n",
-            "332/332 [==============================] - 0s 203us/step - loss: 7.9158 - mean_absolute_error: 7.9158 - val_loss: 7.2499 - val_mean_absolute_error: 7.2499\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.8756 - mean_absolute_error: 6.8756\n",
             "Epoch 11/20\n",
-            "332/332 [==============================] - 0s 192us/step - loss: 7.9079 - mean_absolute_error: 7.9079 - val_loss: 7.2426 - val_mean_absolute_error: 7.2426\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.8412 - mean_absolute_error: 6.8412\n",
             "Epoch 12/20\n",
-            "332/332 [==============================] - 0s 185us/step - loss: 7.8999 - mean_absolute_error: 7.8999 - val_loss: 7.2355 - val_mean_absolute_error: 7.2355\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.8066 - mean_absolute_error: 6.8066\n",
             "Epoch 13/20\n",
-            "332/332 [==============================] - 0s 187us/step - loss: 7.8919 - mean_absolute_error: 7.8919 - val_loss: 7.2283 - val_mean_absolute_error: 7.2283\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.7709 - mean_absolute_error: 6.7709\n",
             "Epoch 14/20\n",
-            "332/332 [==============================] - 0s 192us/step - loss: 7.8838 - mean_absolute_error: 7.8838 - val_loss: 7.2212 - val_mean_absolute_error: 7.2212\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.7351 - mean_absolute_error: 6.7351\n",
             "Epoch 15/20\n",
-            "332/332 [==============================] - 0s 208us/step - loss: 7.8761 - mean_absolute_error: 7.8761 - val_loss: 7.2139 - val_mean_absolute_error: 7.2139\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.6987 - mean_absolute_error: 6.6987\n",
             "Epoch 16/20\n",
-            "332/332 [==============================] - 0s 196us/step - loss: 7.8680 - mean_absolute_error: 7.8680 - val_loss: 7.2069 - val_mean_absolute_error: 7.2069\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.6620 - mean_absolute_error: 6.6620\n",
             "Epoch 17/20\n",
-            "332/332 [==============================] - 0s 196us/step - loss: 7.8602 - mean_absolute_error: 7.8602 - val_loss: 7.1997 - val_mean_absolute_error: 7.1997\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.6253 - mean_absolute_error: 6.6253\n",
             "Epoch 18/20\n",
-            "332/332 [==============================] - 0s 180us/step - loss: 7.8521 - mean_absolute_error: 7.8521 - val_loss: 7.1926 - val_mean_absolute_error: 7.1926\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.5882 - mean_absolute_error: 6.5882\n",
             "Epoch 19/20\n",
-            "332/332 [==============================] - 0s 249us/step - loss: 7.8441 - mean_absolute_error: 7.8441 - val_loss: 7.1856 - val_mean_absolute_error: 7.1856\n",
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.5508 - mean_absolute_error: 6.5508\n",
             "Epoch 20/20\n",
-            "332/332 [==============================] - 0s 252us/step - loss: 7.8364 - mean_absolute_error: 7.8364 - val_loss: 7.1784 - val_mean_absolute_error: 7.1784\n",
-            "[[0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]\n",
-            " [0.24021454]]\n"
+            "416/416 [==============================] - 1s 2ms/step - loss: 6.5137 - mean_absolute_error: 6.5137\n",
+            "[[1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]\n",
+            " [1.9388531]]\n"
           ],
           "name": "stdout"
         }
@@ -2358,10 +2362,16 @@
       },
       "source": [
         "#print(type(dataFeatures))\n",
-        "#print(np.array(dataFeatures.iloc[2]))\n",
-        "#exit\n",
+        "#print(dataFeatures.iloc(2))\n",
         "\n",
-        "print (rnn.predict(dataFeatures))"
+        "print (dataFeatures.iloc[0])\n",
+        "numOfRows = dataFeatures.shape[0]\n",
+        "print (numOfRows)\n",
+        "\n",
+        "for i in range(0, numOfRows-1):\n",
+        "  #print (dataFeatures.iloc[i])\n",
+        "  print()\n",
+        "  \n"
       ],
       "execution_count": 95,
       "outputs": [
